# dyna

./: .gitignore  Cargo.toml  README.md  index.html
old_src/: index.rs  main.rs  stemmer.rs  utils.rs
src/: books.rs  docx.rs  index.rs  lexer.rs  main.rs  pdf.rs  server.rs  stemmer.rs  text.rs  utils.rs
test/: glAttachShader.xhtml  sample  sample.txt  summa.txt  xenos.txt
test/Rust/: Command-Line Rust (Ken Youens-Clark) (Z-Library).epub
