[package]
name = "dyna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
mupdf = "0.4.2"
rust-stemmers = "1.2.0"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
tiny_http = "0.12.0"
url = "2.5.0"
